# ChenSignatures.jl

./: .gitignore  .mailmap  LICENSE  Manifest.toml  Project.toml  README.md  benchmark_results.txt
.github/workflows/: CI.yml  Documentation.yml  PublishPython.yml  TagBot.yml
bench/: Project.toml
benchmark/: Manifest.toml  Project.toml  README.md  benchmark.jl  benchmark.py  benchmark_config.yaml  check_signatures.py  common.py  generate_fixtures.py  pyproject.toml  run_benchmark.py  sigcheck.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/api/: index.html
dev/contributing/: index.html
docs/: Project.toml  make.jl
docs/src/: api.md  contributing.md  index.md
examples/: CondaPkg.toml  Manifest.toml  Project.toml  backward_diff_exp.jl  backward_diff_mul.jl  backward_diff_sig copy.jl  backward_diff_sig.jl  backward_speed.jl  bench_gpt.jl  bench_signature.jl  benchmark.jl  benchmark_batch_sig.jl  benchmark_comprehensive.jl  benchmark_comprehensive_config.toml  benchmark_enzyme_path.jl  benchmark_enzyme_vs_svec.jl  benchmark_gpu_large.jl  benchmark_gpu_scaling.jl  benchmark_horner.jl  benchmark_results.txt  benchmark_speedup_google.jl  benchmark_svector_matrix.jl  enzyme_type_stab.jl  example.jl  exp_benchmark_generated.jl  exp_speedup_claude.jl  forward_diff.jl  gbm_signature_regression.jl  gpu_primer.jl  horner_enzyme.jl  horner_generated.jl  mul_exp_microbenchmark.jl  new_benc.jl  new_exp_backward.jl  regression_plot.jl  run_benchmark.jl  run_benchmark_threaded.bat  segment_benchmark.jl  sparse_v_dense.jl  startup.jl  (+4 more)
examples/.CondaPkg/: meta  pixi.toml
python/: README.md  benchmark.py  pyproject.toml  test_wrapper.py
python/chen/: __init__.py  _version.py  juliapkg.json  torch.py
python/examples/: benchmark_batches.py  compare_pysiglib.py
python/tests/: __init__.py  test_juliapkg_setup.py  test_pytorch_enzyme.py  test_torch.py  test_wrapper.py
src/: Algebra.jl  Chen.jl  ChenSignatures.jl  PathSignatures.jl  api.jl  augmentations.jl  chain_rules.jl  conversions.jl  dense_tensors.jl  gbm_simulation.jl  generic_ops.jl  gpu_kernels.jl  lyndon_basis.jl  path_ensemble.jl  signatures.jl  sparse_dense_conversions.jl  sparse_tensors.jl  tensor_conversions.jl  tensors.jl
test/: Manifest.toml  Project.toml  chain_rules.jl  correctness.jl  edge_cases.jl  exp_log.jl  fixtures.jl  perf_add_scaled.jl  runtests.jl  test_add_scaled.jl  test_augmentations.jl  test_batch.jl  test_enzyme.jl  test_float32.jl  test_rolling_sig.jl
test/gpu/: test_tensor_gpu.jl
test/validation/: generate_fixtures.py  pyproject.toml
v0.3.1/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.3.1/api/: index.html
v0.4.0/: .documenter-siteinfo.json  index.html
v0.4.0/api/: index.html
(+2 files in other folders)
